# snowball

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SESSION_NOTES.md
.github/workflows/: ci.yml  deploy.yml
fin_engine/: Cargo.toml
fin_engine/src/: lib.rs  market.rs
fin_engine/src/core/: accounts.rs  career.rs  expenses.rs  financial_state.rs  game_state.rs  housing.rs  income.rs  job_market.rs  mod.rs  phase.rs  player.rs  time.rs
fin_engine/src/markets/: czech.rs  mod.rs  uk.rs  usa.rs
snowball_web/: Cargo.toml  index.html
snowball_web/src/: app.rs  app_state.rs  main.rs
snowball_web/src/components/: housing_browser.rs  initialization.rs  job_browser.rs  mod.rs
snowball_web/src/screens/: execution.rs  mod.rs  planning.rs  review.rs
