[package]
name = "fin_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = "1.36"
serde = { workspace = true }
serde_json = "1.0"

[features]
default = ["czech"]
czech = []
usa = []
uk = []
