[package]
name = "snowball_web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fin_engine = { path = "../fin_engine" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "console"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
gloo-timers = { version = "0.3", features = ["futures"] }
